--- a/core/package.json
+++ b/core/package.json
@@ -84,12 +84,13 @@
         "@anthropic-ai/sdk": "^0.30.1",
         "@cliqz/adblocker-playwright": "1.34.0",
         "@coral-xyz/anchor": "^0.30.1",
-        "@discordjs/rest": "2.4.0",
         "@discordjs/opus": "github:discordjs/opus",
+        "@discordjs/rest": "2.4.0",
         "@discordjs/voice": "0.17.0",
         "@echogarden/espeak-ng-emscripten": "0.3.0",
         "@echogarden/kissfft-wasm": "0.2.0",
         "@echogarden/speex-resampler-wasm": "0.2.1",
+        "@google-cloud/logging": "^11.2.0",
         "@huggingface/transformers": "3.0.1",
         "@opendocsg/pdf2md": "0.1.31",
         "@solana/spl-token": "0.4.9",
